--- a/Dissertation/5fitnessIoT.tex
+++ b/Dissertation/5fitnessIoT.tex
@@ -2,7 +2,7 @@
 \chapter{Recommending Privacy Settings for Fitness IoT}\label{chapter:fitnessIoT}
 
 \section{Introduction}\label{fitnessIntro}
-In Chapter~\ref{chapter:generalIoT} and~\ref{chapter:householdIoT}, we have discussed how we apply the data-driven approach to the general/public IoT and household IoT contexts, respectively. We developed corresponding IoT privacy-setting interface prototypes that integrated with smart defaults/profiles by predicting users' privacy decisions. In this chapter, we present the work we did in the domain of fitness IoT. We further test the previously-developed data-driven approach to design privacy-setting interfaces for users of fitness IoT devices. Note that moving the context from general/public IoT to household IoT, now to fitness IoT, the context that we are focusing is becoming more narrow. The change of environment brought more challenge. For example, for fitness IoT, there is no contextual scenario, which we focused on in Chapter~\ref{chapter:generalIoT} and~\ref{chapter:householdIoT}. Considering almost all the current fitness IoT devices require corresponding mobile Apps to be used together and the mobile Apps are usually the ones who are take charge of users' privacy information, we focus on the privacy permissions asked by the mobile Apps. In this Chapter, we first collect users permission decisions to fitness IoT permissions\footnote{unlike previous chapters, for fitness IoT you have multiple profiles per user, namely one for each type of data.}. Then we apply our data-driven approach to classify users into groups based on their permission decisions, and create permission profiles for each group. This allows new users to answer very few questions before getting a recommendation of a set of permission profiles, which simplifies users' task of setting every permission for fitness IoT devices.
+In Chapter~\ref{chapter:generalIoT} and~\ref{chapter:householdIoT}, we have discussed how we apply the data-driven approach to the general/public IoT and household IoT contexts, respectively. We developed corresponding IoT privacy-setting interface prototypes that integrated with smart defaults/profiles by predicting users' privacy decisions. In this chapter, we present the work we did in the domain of fitness IoT. We further test the previously-developed data-driven approach to design privacy-setting interfaces for users of fitness IoT devices. Note that moving the context from general/public IoT to household IoT, now to fitness IoT, the context that we are focusing is becoming more narrow. The change of environment brought more challenge. For example, for fitness IoT, there is no contextual scenario, which we focused on in Chapter~\ref{chapter:generalIoT} and~\ref{chapter:householdIoT}. Considering almost all the current fitness IoT devices require corresponding mobile Apps to be used together and the mobile Apps are usually the ones who are take charge of users' privacy information, we focus on the privacy permissions asked by the mobile Apps. In this Chapter, we first collect users permission decisions to fitness IoT permissions. Note, unlike previous chapters, for fitness IoT, we divide those permission data into four groups (discussed in the next section). Thus, each user will have four profiles, namely one for each type of permission. Then we apply our data-driven approach to classify users into groups based on their permission decisions, and create permission profiles for each group. This allows new users to answer very few questions before getting a recommendation of a set of permission profiles, which simplifies users' task of setting every permission for fitness IoT devices.
 
 %As fitness-related data are persistently captured, stored, processed and shared by these devices and related services, the issue of privacy management is becoming increasingly urgent both for the user and the service, which has to respect privacy law, including the new European Union's General Data Protection Regulation (GDPR). This concerns all third parties that manage user data and has of course a major impact on personalization services.
 
