--- a/Dissertation/7conclusion.tex
+++ b/Dissertation/7conclusion.tex
@@ -3,17 +3,17 @@
 
 In this dissertation, we first present three studies on recommending privacy settings for different IoT environments, namely general/public IoT, household IoT, and fitness IoT, respectively. We developed and utilized a ``data-driven” approach in these three studies—We first use statistical analysis and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior, and then create a set of ``smart” privacy defaults/profiles based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click or by answering a few related questions. To address the limitation of lacking evaluation to the designed interfaces, we conducted a user study to evaluate the new interfaces of recommending privacy-settings for household IoT users The results shows that by using smart defaults and smart profile can significantly improve users' experience, including satisfaction with the system, trust to the company. Our research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
 
-The main contribution of my dissertation are:
+The main contributions of my dissertation are:
 \begin{itemize}
 	\item User testing is often used to inform the development of user interfaces. Since the interface needs to be developed for the IoT system does not yet exists, we developed a data-driven approach to designing IoT privacy-setting interfaces for three different IoT environments, namely general IoT, household IoT, and fitness IoT.
 	\item Prior research has shown that the decision-making of IoT users are heavily depending on the contextual parameter of the IoT usage scenario. Thus, we investigated the effect of IoT scenario parameters on IoT users’ decision and attitudes to find out which contextual parameter is more important in users’ decision making process. And based on the importance of the different contextual parameters, we created a set of privacy-setting interfaces.
 	\item Setting privacy-settings in these interfaces can still be complicated. To solve this problem, we used decision tree algorithm to create smart defaults and developed several clustering algorithm to group the users and created corresponding smart profiles for each group.
 	\item During the process of creating smart defaults and smart profiles, we found that when the decision tree of the smart defaults/profiles become complex, this smart defaults/profiles will be difficult to explain to the users, leading bad decision making when choosing from provided options. We explored the trade-off between accuracy and parsimony when creating smart defaults/profile by manipulating the degree of pruning to the decision tree. We striked the balance between higher accuracy  and better explainability of the smart defaults/profiles.
 	\item In Fitness IoT domain, we also created a series of strategies to recommend ``smart profiles" for users.
-	\item Finally, we conducted a study to evaluate the designed interfaces in terms of interface complexity and profile complexity. The results show that smart defaults and smart profiles integrated in our privacy-setting interfaces have significantly improved users experience compared to the baseline condition.
+	\item Finally, we conducted a study to evaluate the designed interfaces in terms of interface complexity and profile complexity. The results show that smart defaults and smart profiles integrated in our privacy-setting interfaces significantly improved users experience compared to the baseline condition.
 \end{itemize}
 
-This research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
+This research can benefit IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
 I suggest the designers of future IoT privacy-setting interface to make use of our data-driven approach and carefully consider the trade-off between ``smart defaults" and ``smart profiles". ``smart profiles" and ``smart defaults" can be the viable route for designing future IoT privacy-setting interface. When designing their own setting interfaces and smart defaults/profiles, the effect of interface complexity and profile complexity should be carefully investigated based on their own user groups, dataset, and contexts.
 
 
