--- a/Dissertation/acknowledgments.tex
+++ b/Dissertation/acknowledgments.tex
@@ -1,50 +1,6 @@
 \chapter*{Acknowledgments}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod
-tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut
-labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore
-magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-Lorem ipsum dolor sit amet.
+First and foremost, I would like to express immense	gratitude to my advisor, Dr. Bart Knijnenburg, for his support, patience, and understanding during the past four years. Second, I would like to thank my committee members, Dr. Larry Hodges, Dr. Alexander Herzog, and Dr. Ilaria Torre, for their help and suggestions they provided on my research. Third, I want to thank Paritosh, Reza, and Byron for their friendship and inspiration. Last but not least, I want to thank my parents and my wife Mandy who have supported me throughout this long journey.
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan
-et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis
-dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
-adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-magna aliquam erat volutpat.
+Financial support was provided by Clemson University, NSF grants 1640664 and CNS-1126344, and a gift from Samsung Research America.
 
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
-eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla
-facilisi.
 
-Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming
-id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet,
-consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
-exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-consequat.
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-consequat, vel illum dolore eu feugiat nulla facilisis.
-
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor
-invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-amet, consetetur sadipscing elitr,  At accusam aliquyam diam diam dolore
-dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore
-Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut
-vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore
-et dolore magna aliquyam erat. 
