--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -1,4 +1,4 @@
-
+% !TeX root = dissertation.tex
 \clearpage
 \onecolumn
 \setcounter{table}{0}
@@ -402,30 +402,7 @@ Over-all Average & 84.74 \% & 68.74 \% & 83.41 \% & 68.52 \% & 69.70 \% & 73.11 
 %Figure~\ref{fig:ui2AllOn} shows the experimental condition --- UI2:Everything-On.
 \begin{figure}
 	\centering
-	\begin{subfigure}[t]{0.19\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2allOff1.png}
-	\end{subfigure}%
-	~~~~~~
-	\begin{subfigure}[t]{0.19\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2allOffLocal.png}
-	\end{subfigure}%
-	~~~~~~
-	\begin{subfigure}[t]{0.19\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2allOff2.png}
-	\end{subfigure}%
-	~~~~~~
-	\begin{subfigure}[t]{0.19\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2allOn3.png}
-	\end{subfigure}%
-	~~~~~~
-	\begin{subfigure}[t]{0.19\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2allOn4.png}
-	\end{subfigure}%
+	\includegraphics[width=\textwidth]{figures/ui2AllOn.png}
 	\caption{User Interface 2 with all settings turned on}
 	\label{fig:ui2AllOn}
 \end{figure}
@@ -433,25 +410,7 @@ Over-all Average & 84.74 \% & 68.74 \% & 83.41 \% & 68.52 \% & 69.70 \% & 73.11 
 %Figure~\ref{fig:ui1OneR} shows the experimental condition --- UI1:Smart Default.
 \begin{figure}
 	\centering
-	\begin{subfigure}[t]{0.24\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui1sd1.png}
-	\end{subfigure}%
-	~
-	\begin{subfigure}[t]{0.24\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui1sd2.png}
-	\end{subfigure}%
-	~
-	\begin{subfigure}[t]{0.24\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui1sd3.png}
-	\end{subfigure}%
-	~
-	\begin{subfigure}[t]{0.24\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui1sd4.png}
-	\end{subfigure}%
+	\includegraphics[width=\textwidth]{figures/ui1OneR.png}
 	\caption{User Interface 1 with Smart Default}
 	\label{fig:ui1OneR}
 \end{figure}
@@ -459,30 +418,7 @@ Over-all Average & 84.74 \% & 68.74 \% & 83.41 \% & 68.52 \% & 69.70 \% & 73.11 
 %Figure~\ref{fig:ui2SD} shows the experimental condition --- UI2:Smart Default.
 \begin{figure}
 	\centering
-	\begin{subfigure}[t]{0.2\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2sd1.png}
-	\end{subfigure}%
-	~~~~~
-	\begin{subfigure}[t]{0.2\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2sd2.png}
-	\end{subfigure}%
-	~~~~~
-	\begin{subfigure}[t]{0.2\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2sd3.png}
-	\end{subfigure}%
-	~~~~~
-	\begin{subfigure}[t]{0.2\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2sd4.png}
-	\end{subfigure}%
-	~~~~~
-	\begin{subfigure}[t]{0.2\textwidth}
-		\centering
-		\includegraphics[height=2.8in]{figures/ui2sd5.png}
-	\end{subfigure}%
+	\includegraphics[width=\textwidth]{figures/ui2SD.png}
 	\caption{User Interface 2 with Smart Default}
 	\label{fig:ui2SD}
 \end{figure}
